--- a/src/stories/button2.css
+++ b/src/stories/button2.css
@@ -1,4 +1,27 @@
 .button {
-    padding: 10px;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button--primary{
+    border-radius: 30px;
+}
+
+.button--secondary{
     border-radius: 5px;
+}
+
+.button--small {
+    padding: 10px 16px;
+    font-size: 12px;
+}
+
+.button--medium {
+    padding: 11px 20px;
+    font-size: 14px;
+}
+
+.button--large {
+    padding: 12px 24px;
+    font-size: 16px;
 }
